# bunker_dataset_recorder

./: .gitignore  .gitmodules  README.md  startup-nav.sh  startup.sh
docker/: docker-compose.yml
ros2_ws/bunker_gazebo_sim/: CMakeLists.txt  package.xml
ros2_ws/bunker_gazebo_sim/config/: bunker_controllers.yaml
ros2_ws/bunker_gazebo_sim/launch/: bunker_gazebo_sim.launch.py
ros2_ws/bunker_gazebo_sim/urdf/: bunker.xacro
ros2_ws/src/aeva_packages/aeva_msgs/: CMakeLists.txt
ros2_ws/src/aeva_packages/aeva_msgs/msg/: EstimatedDetectionRangeBin.msg
ros2_ws/src/aeva_packages/ros2_aeva_publisher/: package.xml
ros2_ws/src/aeva_packages/ros2_aeva_publisher/src/: AevaAPICallbacks.cc  AevaPublisherNode.h  ros2_aeva_publisher.cc
ros2_ws/src/atlas/api_examples/point_cloud_callbacks/: CMakeLists.txt  README.md  point_cloud_callbacks.cc
ros2_ws/src/atlas/ros_examples/src/aeva_msgs/: CMakeLists.txt
ros2_ws/src/atlas/ros_examples/src/aeva_msgs/msg/: Detection3D.msg
ros2_ws/src/atlas/ros_examples/src/ros_aeva_publisher/: CMakeLists.txt
ros2_ws/src/atlas/ros_examples/src/ros_aeva_publisher/src/: AevaAPICallbacks.h
ros2_ws/src/bunker_packages/bunker_description/: CMakeLists.txt  package.xml
ros2_ws/src/bunker_packages/bunker_description/meshes/sensors/: CABLE_SPACER.gltf  CS2_62X_O_Ring_20190509.gltf  Customized_model_for_L1L2_Helix_20190529_1.gltf  FOOT_RUBBER_CONCORD_2.gltf  O_ring_MTi_6x0R_simple_2__MTi_6x0R_simple.gltf  Part_11.gltf  Part_15.gltf  Part_2.gltf  Part_4_1.gltf  Part_7.gltf  _20220058__________M2_6.gltf  _600_13737_0000_A01.gltf  _602_00007_1_3.gltf  _611_00016_20.gltf
ros2_ws/src/bunker_packages/bunker_description/urdf/: bunker.urdf.xacro
ros2_ws/src/hugin/ros2/src/liboden/: CMakeLists.txt
ros2_ws/src/hugin_packages/hugin_d1/hugin_d1/: CMakeLists.txt
ros2_ws/src/hugin_packages/hugin_d1/hugin_d1/config/: hugin_d1.yaml
ros2_ws/src/hugin_packages/hugin_d1/hugin_d1/control/include/: ArbeReceiver.hpp  LogClient.hpp  RTPPacket.hpp  SomeIpBuilder.hpp  TCPReceiver.hpp  someip_typedef.hpp
ros2_ws/src/hugin_packages/hugin_d1/hugin_d1/control/src/: ControlNode.cpp  DebugCommands.cpp  SomeIpReader.cpp  main.cpp
ros2_ws/src/hugin_packages/hugin_d1/hugin_d1/parser/include/: PointCloudParserNode.hpp
ros2_ws/src/hugin_packages/hugin_d1/hugin_d1/tests/: read_test_files.hpp  test_pointcloud.cpp
ros2_ws/src/hugin_packages/hugin_d1/hugin_d1/tests/test_resources/: cartesian_99.txt  phase_power_doppler_0.txt
ros2_ws/src/hugin_packages/hugin_d1/raf2_interfaces/: CMakeLists.txt
ros2_ws/src/hugin_packages/hugin_d1/raf2_interfaces/msg/: Header.msg  Thresholds.msg
ros2_ws/src/hugin_packages/hugin_d1/raf2_interfaces/srv/: RdrCtrlSetActiveSeq.srv  RdrCtrlSetThresholds.srv
ros2_ws/src/hugin_packages/oden/oden_mqtt_bridge/: package.xml
ros2_ws/src/hugin_packages/runes/: package.xml
ros2_ws/src/hugin_packages/runes/include/: PerceptionVisualizer.hpp
ros2_ws/src/hugin_packages/runes/src/: RegionOfInterestVisualization.cpp  perception_visualizer_main.cpp
ros2_ws/src/hugin_packages/ymir/: README.md  package.xml
ros2_ws/src/hugin_packages/ymir/config/: ymir.yaml
ros2_ws/src/hugin_packages/ymir/include/: Ymir.hpp
ros2_ws/src/hugin_packages/ymir/launch/: ymir.launch.py
ros2_ws/src/hugin_packages/ymir/test/: test_ymir_core.cpp
ros2_ws/src/traversability_mapping_ros2/elevation_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/traversability_mapping_ros2/elevation_msgs/msg/: OccupancyElevation.msg
ros2_ws/src/traversability_mapping_ros2/traversability_mapping/: CMakeLists.txt  package.xml
ros2_ws/src/traversability_mapping_ros2/traversability_mapping/include/: utility.h
ros2_ws/src/traversability_mapping_ros2/traversability_mapping/include/planner/: cubic_spline_interpolator.h  tm_planner.h
ros2_ws/src/traversability_mapping_ros2/traversability_mapping/launch/: README.md  offline.launch.py  offline_trav.launch.py  online.launch.py
ros2_ws/src/traversability_mapping_ros2/traversability_mapping/launch/include/: move_base.launch.py  traversability_mapping.rviz
ros2_ws/src/traversability_mapping_ros2/traversability_mapping/src/: traversability_filter.cpp  traversability_map.cpp  traversability_path.cpp  traversability_prm.cpp
shared/: atlas-launch.sh  (+16 more)
shared/hugin/ros2/src/hugin_d1/hugin_d1/: package.xml
shared/hugin/ros2/src/hugin_d1_gui/: README.md  package.xml
shared/hugin/ros2/src/hugin_d1_gui/src/: info_bar.hpp  rafgui.cpp  recorder.hpp
shared/hugin/ros2/src/yggdrasil/: README.md  package.xml  setup.py
shared/hugin/ros2/src/yggdrasil/config/: sensrad_params_1.yaml  sensrad_params_2.yaml
shared/hugin/ros2/src/yggdrasil/extrinsics/: extrinsics_dual_hugin.yaml
shared/hugin/ros2/src/yggdrasil/launch/: sensrad_group.launch.py  visual.launch.py
shared/hugin/ros2/src/ymir/: CMakeLists.txt
shared/hugin/ros2/src/ymir/src/: ymir_main.cpp
shared_folder/atlas/ros2_examples/src/aeva_msgs/: package.xml
shared_folder/atlas/ros2_examples/src/aeva_msgs/msg/: EstimatedDetectionRange.msg  PointCloudMetadata.msg
shared_folder/atlas/ros2_examples/src/ros2_aeva_publisher/: CMakeLists.txt
shared_folder/atlas/ros2_examples/src/ros2_aeva_publisher/src/: AevaAPICallbacks.cc  AevaPublisherNode.cc  ros2_aeva_publisher.cc
shared_folder/atlas/ros_examples/src/aeva_msgs/: package.xml
shared_folder/atlas/ros_examples/src/aeva_msgs/msg/: RawData.msg
shared_folder/atlas/ros_examples/src/ros_aeva_publisher/: README.md  package.xml
shared_folder/atlas/ros_examples/src/ros_aeva_publisher/src/: AevaAPICallbacks.cc  AevaPublisher.cc  AevaPublisher.h  ros_aeva_publisher.cc
shared_folder/hugin/ros2/src/hugin_d1/raf2_interfaces/: package.xml
shared_folder/hugin/ros2/src/hugin_d1_gui/: CMakeLists.txt
shared_folder/hugin/ros2/src/hugin_d1_gui/src/: application.hpp  radar_status_frame.hpp  window.hpp
shared_folder/hugin/ros2/src/liboden/: package.xml
shared_folder/hugin/ros2/src/runes/: CMakeLists.txt
shared_folder/hugin/ros2/src/runes/include/: RegionOfInterestVisualization.hpp
shared_folder/hugin/ros2/src/runes/launch/: runes.launch.py
(+291 files in other folders)
