<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>runes</name>
  <version>0.0.0</version>
  <description> Sensrad ROS2 package for visualizing perception results.</description>
  <maintainer email="do_not_use@sensrad.com">Per Ception</maintainer>
  <license>Proprietary License - see LICENSE file</license>

  <url type="website">support.sensrad.com</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>oden_interfaces</depend>

  <depend>message_filters</depend>
  <depend>eigen</depend>
  <depend>liboden</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- Define build tests -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_clang_tidy</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
