<?xml version="1.0"?>
<package format="3">
  <name>elevation_msgs</name>
  <version>0.0.0</version>
  <description>The elevation_msgs package contains custom messages for elevation mapping.</description>

  <maintainer email="tshan3@stevens.edu">Tixiao Shan</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
