<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oden_mqtt_bridge</name>
  <version>0.1.0</version>
  <description>Oden Mqtt Bridge</description>
  <maintainer email="do_not_use@sensrad.com">Per Ception</maintainer>
  <license>Proprietary License - see LICENSE file</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>oden_interfaces</depend>
  <depend>raf2_interfaces</depend>
  <depend>boost</depend>
  <depend>libpaho-mqtt-dev</depend>
  <depend>libpaho-mqttpp-dev</depend>
  <depend>nlohmann-json-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <!-- Define build tests -->
  <test_depend>ament_cmake_cppcheck</test_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
