<package format="3">
  <name>yggdrasil</name>
  <version>1.0.1</version>
  <description>ROS2 launch files for Sensrad radar platforms</description>
  <maintainer email="do_not_use@sensrad.com">Per Ception</maintainer>
  <license>Proprietary License - see LICENSE file</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <exec_depend>hugin_d1</exec_depend>
  <exec_depend>oden</exec_depend>
  <exec_depend>runes</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
</package>
