<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>aeva_msgs</name>
  <version>4.0.0</version>
  <description>The aeva_msgs package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="customersupport@aeva.ai">Aeva, Inc</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Aeva Software EULA</license>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>