<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>liboden</name>
  <version>0.1.0</version>
  <description>liboden</description>
  <maintainer email="do_not_use@sensrad.com">Per Ception</maintainer>
  <url type="website">support.sensrad.com</url>
  <license>Proprietary License - see LICENSE file</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
